Archive2/54/37213aa3101106/output
main.cpp: In function 'int main()':
main.cpp:11:23: error: use of deleted function 'B::B(B&&)'
     B b1(std::move(b0));
                       ^
main.cpp:6:5: note: declared here
     B(B &&) = delete;
     ^
