Archive2/54/37213aa3101106/main.cpp
#include <utility>

class B {
public:
    B() = default;
    B(B &&) = delete;
};

int main() {
    B b0;
    B b1(std::move(b0));
	return 0;
}
